# data-processing

./: Dockerfile  README.md  deputados.py  deputados_digest.py  deputados_expenses.py  dev_server.py  pyproject.toml  utils.py
deputados_data/: dep_107283.json  dep_108338.json  dep_109429.json  dep_115746.json  dep_116379.json  dep_121948.json  dep_122158.json  dep_122195.json  dep_122974.json  dep_128760.json  dep_132504.json  dep_133439.json  dep_133810.json  dep_133968.json  dep_135054.json  dep_136811.json  dep_137070.json  dep_139285.json  dep_141335.json  dep_141372.json  dep_141391.json  dep_141398.json  dep_141405.json  dep_141408.json  dep_141411.json  dep_141417.json  dep_141421.json  dep_141422.json  dep_141427.json  dep_141431.json  dep_141434.json  dep_141439.json  dep_141450.json  dep_141458.json  dep_141459.json  dep_141464.json  dep_141470.json  dep_141488.json  dep_141508.json  dep_141513.json  (+474 more)
deputados_data_digest/: dep_107283.json  dep_107283_expenses.json  dep_108338.json  dep_108338_expenses.json  dep_109429.json  dep_109429_expenses.json  dep_115746.json  dep_115746_expenses.json  dep_116379.json  dep_116379_expenses.json  dep_121948.json  dep_121948_expenses.json  dep_122158.json  dep_122158_expenses.json  dep_122195.json  dep_122195_expenses.json  dep_122974.json  dep_122974_expenses.json  dep_128760.json  dep_132504.json  dep_132504_expenses.json  dep_133439.json  dep_133439_expenses.json  dep_133810.json  dep_133810_expenses.json  dep_133968.json  dep_133968_expenses.json  dep_135054.json  dep_135054_expenses.json  dep_136811.json  (+958 more)
(+476 files in other folders)
