[tool.poetry]
name = "acomapanha-legis-data-mining"
version = "0.1.0"
description = ""
authors = ["Jose Eduardo Kimura Reis <j.eduardokimura@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
Flask = "^2.1.2"
Flask-Cors = "^3.0.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
